# ds-coding-interview-template-2026

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: README.md
notebooks/: exercise.ipynb  workspace.ipynb
src/interview/: __init__.py  candidate_code.py  solution.py
tests/: test_environment.py
