[project]
name = "ds-coding-interview-template-2026"
version = "0.1.0"
description = "Template repository for data science coding interview."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
line-ending = "lf"